# tree-sitter-shuttle-notation

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  go.mod  grammar.js  log.html  package-lock.json  package.json  pyproject.toml  setup.py  test.sh  testing_file.shuttle  testing_file2.shuttle  tree-sitter.json
bindings/c/: tree-sitter-tree-sitter-shuttle-notation.pc.in
bindings/c/tree_sitter/: tree-sitter-tree-sitter-shuttle-notation.h
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_tree_sitter_shuttle_notation/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterTreeSitterShuttleNotationTests/: TreeSitterTreeSitterShuttleNotationTests.swift
src/: grammar.json  node-types.json  parser.c
