[package]
name = "tree-sitter-tree-sitter-shuttle-notation"
description = "Tree sitter for shuttle notation"
version = "0.1.4"
authors = ["estrandv <emil.strandvik@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "tree-sitter-shuttle-notation"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/estrandv/tree-sitter-shuttle-notation"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.3"
